# python-web-quickstart

./: .env.dev  .gitignore  .vercelignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
api/: main.py
api/helpers/: authentication.py  exception_handler.py  jwt.py
api/routes/: todos.py  users.py
core/config/: database.py  env.py
core/entities/: __init__.py  todo.py  user.py
core/helpers/: credentials.py  exceptions.py
core/repositories/: todo_repository.py  user_repository.py
core/services/: todo_service.py  user_service.py
core/usecases/: add_todo.py  delete_todo.py  get_todos.py  update_todo.py  user_authenticate.py  user_create_account.py
migrations/: env.py
migrations/versions/: f564759207a7_.py
web/: components.json  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/sign_in/: page.tsx
web/app/sign_up/: page.tsx
web/app/todos/[username]/: page.tsx
web/components/: field_error.tsx  login_form.tsx  profile.tsx
web/core/: actions.tsx  eventHandlers.tsx  store.tsx
web/lib/: form.ts  safeFetch.ts  user.ts  utils.ts
