[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.114.2",
    "passlib>=1.7.4",
    "pyjwt>=2.9.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30.6",
]
